[workspace]
members = ["collector", "collector/benchlib", "site", "database", "intern"]
exclude = ["rust/src"]
resolver = "2"

[workspace.dependencies]
hashbrown = "0.14"
log = "0.4"
serde = "1"
serde_json = "1"

[profile.release.package.site]
debug = 1

[profile.release.package.collector]
debug = 1
