[workspace]
members = ["collector", "collector/benchlib", "site", "database", "intern"]
exclude = ["rust/src"]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
chrono = "0.4"
clap = "4.1"
env_logger = "0.10"
hashbrown = "0.14"
lazy_static = "1"
log = "0.4"
serde = "1"
serde_json = "1"
tokio = "1.36"

[profile.release.package.site]
debug = 1

[profile.release.package.collector]
debug = 1
