[package]
authors = ["Mark-Simulacrum <mark.simulacrum@gmail.com>", "Nicholas Cameron <ncameron@mozilla.com>", "The rustc-perf contributors"]
name = "rustc-perf"
version = "0.1.0"

[dependencies]
chrono = "0.2.25"
error-chain = "0.7.1"
iron = "0.4.0"
router = "0.4.0"
persistent = "0.2.0"
serde = "0.8.20"
serde_json = "0.8.4"
serde_derive = "0.8.20"
env_logger = "0.3.5"
log = "0.3.6"

[dev-dependencies]
iron-test = "0.4.0"
lazy_static = "0.2.1"
