[package]
authors = ["Mark-Simulacrum <mark.simulacrum@gmail.com>", "Nicholas Cameron <ncameron@mozilla.com>", "The rustc-perf contributors"]
name = "rustc-perf"
version = "0.1.0"

[dependencies]
error-chain = "0.10.0"
iron = "0.5.0"
router = "0.5.1"
persistent = "0.3.0"
serde = "0.9.13"
serde_json = "0.9.10"
serde_derive = "0.9.13"
env_logger = "0.4.2"
log = "0.3.6"

[dev-dependencies]
iron-test = "0.5.0"
lazy_static = "0.2.1"

[dependencies.chrono]
version = "0.3"
features = [ "serde" ]
