[package]
authors = ["The Rust Compiler Team"]
name = "collector"
version = "0.1.0"
edition = "2018"
description = "Collects Rust performance data"

[dependencies]
clap = { version = "3.0.6", features = ["derive"] }
env_logger = "0.8"
anyhow = "1"
thiserror = "1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
libc = "0.2"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1"
semver = "1.0"
reqwest = { version = "0.11", features = ["json"] }
xz2 = "0.1.3"
tar = "0.4"
tokio = { version = "1.6", features = ["rt"] }
database = { path = "../database" }
intern = { path = "../intern" }
futures = "0.3.5"
num_cpus = "1.13"
jobserver = "0.1.21"
crossbeam-utils = "0.8"
snap = "1"
filetime = "0.2.14"
walkdir = "2"
flate2 = { version = "1.0.22", features = ["rust_backend"] }
rayon = "1.5.2"

[target.'cfg(windows)'.dependencies]
miow = "0.3"
windows-sys = { version = "0.36.1", features = ["Win32_Foundation"] }
