[package]
authors = ["The Rust Compiler Team"]
name = "collector"
version = "0.1.0"
edition = "2021"
description = "Collects Rust performance data"
rust-version = "1.75.0"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive"] }
env_logger = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "process"] }

thiserror = "1"
tempfile = "3"
libc = "0.2"
semver = "1.0"
xz2 = "0.1.3"
tar = "0.4"
futures = "0.3.5"
jobserver = "0.1.21"
snap = "1"
walkdir = "2"
flate2 = { version = "1.0.22", features = ["rust_backend"] }
rayon = "1"
cargo_metadata = "0.18"
thousands = "0.2.0"
rustc-demangle = { version = "0.1", features = ["std"] }
similar = "2.2"
console = "0.15"
object = "0.36.0"
tabled = { version = "0.14.0", features = ["ansi-str"] }
humansize = "2.1.3"
regex = "1.7.1"

analyzeme = "12.0.0"
inquire = "0.7.5"

benchlib = { path = "benchlib" }
database = { path = "../database" }
ratatui = "0.28.1"

[target.'cfg(windows)'.dependencies]
miow = "0.3"
windows-sys = { version = "0.45.0", features = ["Win32_Foundation"] }

[features]
# Enable more precise Cachegrind profiles for runtime benchmarks.
# Requires a recent Valgrind to be installed.
# Pass DEP_VALGRIND=<path-to-valgrind>/include environment variable when building.
precise-cachegrind = []
