[package]
name = "database"
version = "0.1.0"
authors = ["Mark Rousskov <mark.simulacrum@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["cargo"] }
hashbrown = { workspace = true, features = ["serde"] }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }

rusqlite = { version = "0.28", features = ["bundled"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "runtime"] }
async-trait = "0.1"
tokio = { version = "1.6", features = ["sync", "macros", "parking_lot"] }
intern = { path = "../intern" }
chrono = { version = "0.4.38", features = ["serde"] }
reqwest = { version = "0.11" }
postgres-native-tls = "0.5"
native-tls = "0.2"
env_logger = "0.10"
futures-util = "0.3.5"
bytes = "1"
csv = "1"
x509-cert = { version = "0.2.5", features = ["pem"] }
