[package]
name = "database"
version = "0.1.0"
authors = ["Mark Rousskov <mark.simulacrum@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["cargo"] }
env_logger = { workspace = true }
hashbrown = { workspace = true, features = ["serde"] }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["sync", "macros", "rt-multi-thread"] }

rusqlite = { version = "0.39", features = ["bundled"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "runtime"] }
tokio-postgres-rustls = { version = "0.14", features = ["aws-lc-rs"] }
rustls = "0.23"
async-trait = "0.1"
futures-util = "0.3.5"
bytes = "1"
csv = "1"
x509-cert = { version = "0.2.5", features = ["pem"] }

intern = { path = "../intern" }
uuid = { version = "1.16.0", features = ["v4"] }
