[package]
name = "intern"
version = "0.1.0"
authors = ["Mark Rousskov <mark.simulacrum@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bumpalo = "3.2"
parking_lot = "0.10"
arc-swap = "0.4"
hashbrown = "0.7.0"
lazy_static = "1"
serde = "1"
serde_derive = "1"
