[package]
authors = ["Mark-Simulacrum <mark.simulacrum@gmail.com>", "Nicholas Cameron <ncameron@mozilla.com>", "The rustc-perf contributors"]
name = "rustc-perf"
version = "0.1.0"

[dependencies]
chrono = "0.2.22"
error-chain = "0.2.2"
iron = "0.4.0"
router = "0.2.0"
persistent = "0.2.0"
serde = "0.8.0"
serde_json = "0.8.0"
serde_macros = "0.8.0"
