[package]
authors = ["Mark-Simulacrum <mark.simulacrum@gmail.com>", "Nicholas Cameron <ncameron@mozilla.com>", "The rustc-perf contributors"]
name = "rustc-perf"
version = "0.1.0"

[dependencies]
chrono = "0.2.22"
error-chain = "0.5.0"
iron = "0.4.0"
router = "0.2.0"
persistent = "0.2.0"
serde = "0.8.3"
serde_json = "0.8.1"
serde_macros = "0.8.3"
env_logger = "0.3.4"
log = "0.3.6"

[dev-dependencies]
iron-test = "0.4.0"
lazy_static = "0.2.1"
difference = "0.4.1"
term = "0.4.4"
