[package]
authors = [
    "Mark-Simulacrum <mark.simulacrum@gmail.com>",
    "Nicholas Cameron <ncameron@mozilla.com>",
    "The rustc-perf contributors",
]
name = "site"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
env_logger = { workspace = true }
hashbrown = { workspace = true, features = ["serde"] }
log = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "json"] }
serde = { workspace = true, features = ["rc"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "time"] }

futures = "0.3"
hyper = { version = "0.14", features = ["server", "stream"] }
headers = "0.3"
http = "0.2"
rmp-serde = "1.1"
brotli = "3.3.3"
semver = "1.0"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4.2"
regex = "1"
toml = "0.7"
rust_team_data = { git = "https://github.com/rust-lang/team" }
parking_lot = "0.12"
snap = "1"
itertools = "0.10"
arc-swap = "1.3"
bytes = "1.0"
url = "2"
analyzeme = "12.0.0"
inferno = { version = "0.11", default-features = false }
mime = "0.3"
# prometheus currently uses plain text, so disable protobuf
prometheus = { version = "0.14", default-features = false }
uuid = { version = "1.3.0", features = ["v4"] }
tera = { version = "1.19", default-features = false }
rust-embed = { version = "8.2.0", features = [
    "include-exclude",
    "interpolate-folder-path",
] }
humansize = "2"
lru = "0.12.0"
ruzstd = "0.7.0"

collector = { path = "../collector" }
database = { path = "../database" }

[target.'cfg(unix)'.dependencies]
jemallocator = "0.5"
jemalloc-ctl = "0.5"

[build-dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = "0.7"

[dev-dependencies]
insta = "1.40.0"
