[package]
name = "benchlib"
version = "0.1.0"
edition = "2021"
description = "Library for defining and measuring benchmarks of Rust code"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.61"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
log = "0.4.17"
env_logger = "0.9.0"
clap = { version = "3.2", features = ["derive"] }
libc = "0.2"

[target.'cfg(unix)'.dependencies]
perf-event = "0.4.7"
