[package]
authors = ["The Rust Compiler Team"]
name = "postgres-to-sqlite"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.1", features = ["cargo"] }
database = { path = "../../database" }
env_logger = "0.10"
futures-util = "0.3.5"
rusqlite = { version = "0.28", features = ["bundled"] }
tokio = { version = "1.6", features = ["sync", "macros"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "runtime"] }
