[package]
authors = ["The Rust Compiler Team"]
name = "sqlite-to-postgres"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.1", features = ["cargo"] }
csv = "1"
database = { path = "../../database" }
env_logger = "0.10"
futures-util = "0.3.5"
rusqlite = { version = "0.28", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.6", features = ["sync", "macros"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-chrono-0_4", "runtime"] }
