[package]
name = "keccak"
version = "0.1.0"
authors = ["RustCrypto Developers"]
license = "CC0-1.0"
description = "Keccak-f sponge function"
documentation = "https://docs.rs/keccak"
repository = "https://github.com/RustCrypto/sponges"
keywords = ["crypto", "sponge", "keccak-f"]
categories = ["cryptography", "no-std"]

[features]
no_unroll = []

[badges]
travis-ci = { repository = "RustCrypto/sponges" }
