[package]
name = "webpush-server"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]

[dependencies]
error-chain = "0.10"
futures = "0.1"
hyper = "0.11"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
time = "0.1"
tokio-core = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"
tokio-tungstenite = "0.2"
tungstenite = "0.2"
uuid = { version = "0.5", features = ["serde", "v4"] }

[patch.crates-io]
native-tls = { path = "./native-tls-0.1.5" }

[workspace]