[package]

name = "html5ever"
version = "0.5.4"
authors = [ "The html5ever Project Developers" ]
license = "MIT / Apache-2.0"
repository = "https://github.com/servo/html5ever"
description = "High-performance browser-grade HTML5 parser"
documentation = "https://kmcallister.github.io/docs/html5ever/html5ever/index.html"
build = "build.rs"

[lib]
name = "html5ever"

# https://github.com/rust-lang/cargo/issues/1512
doctest = false

[dependencies]
log = "0"
phf = "0.7"
string_cache = "0.2.0"
mac = "0"

# Tendril 0.2.4 stopped compiling on stable as of Rust 1.69, because of UB caused by unaligned
# references to packed structs fields.
# The `tendril-0.2.4-patched` directory contains a patched version of tendril 0.2.4, which removes
# the #[packed] attribute from several structs, thus making this benchmark compilable.
tendril = { path = "tendril-0.2.4-patched" }
heapsize = { version = ">=0.1.1, <0.4", optional = true }
heapsize_plugin = { version = "0.1.0", optional = true }

[dev-dependencies]
rustc-serialize = "0.3.15"
rustc-test = "0.1.3"

[build-dependencies]
phf_codegen = "0.7.3"
rustc-serialize = "0.3.15"
html5ever_macros = { version = "0.2.6", path = "macros", optional = true }

[profile.dev]
debug = false

[profile.test]
debug = false

[workspace]